--- a/pom.xml
+++ b/pom.xml
@@ -96,13 +96,13 @@
       <repository>
         <id>nexus</id>
         <name>Devops Xpress Releases Nexus Repository</name>
-        <url>http://98.81.159.237:8081/repository/tesla-releases/</url>
+        <url>/</url>
       </repository>
-      
+      http://192.168.28.5:8081/Devops/repository/tesla-releases/
       <snapshotRepository>
         <id>nexus</id>
         <name>Devops Xpress Snapshot Nexus Repository </name>
-        <url>http://98.81.159.237:8081/repository/tesla-snapshots/</url>
+        <url>/</url>http://192.168.28.5:8081/Devops/repository/tesla-snapshot/
       </snapshotRepository>
       
   </distributionManagement>
