--- a/pom.xml
+++ b/pom.xml
@@ -96,13 +96,12 @@
       <repository>
   <id>nexus</id>
   <name>Devops Xpress Releases Nexus Repository</name>
- <url>/</url>
+ <url>/ http://192.168.28.5:8081/Devops/repository/tesla-releases/</url>
  </repository>
- http://192.168.28.5:8081/Devops/repository/tesla-releases/
  <snapshotRepository>
 <id>nexus</id>
 <name>Devops Xpress Snapshot Nexus Repository </name>
-<url>/</url>http://192.168.28.5:8081/Devops/repository/tesla-snapshot/
+<url>/http://192.168.28.5:8081/Devops/repository/tesla-snapshot/</url>
       </snapshotRepository>
       
   </distributionManagement>
