--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
       <repository>
   <id>nexus</id>
   <name>Devops Xpress Releases Nexus Repository</name>
- <url>/ http://192.168.28.5:8081/Devops/repository/tesla-releases/</url>
+ <url>//</url>http://192.168.28.5:8081/Devops/repository/tesla-snapshot/
  </repository>
  <snapshotRepository>
 <id>nexus</id>
