--- a/pom.xml
+++ b/pom.xml
@@ -96,12 +96,12 @@
       <repository>
   <id>nexus</id>
   <name>Devops Xpress Releases Nexus Repository</name>
- <url>/http://192.168.28.5:8081/Devops/repository/tesla-releases/</url>
+ <url>http://192.168.28.5:8081/Devops/repository/tesla-snapshot/</url>
  </repository>
  <snapshotRepository>
 <id>nexus</id>
 <name>Devops Xpress Snapshot Nexus Repository </name>
-<url>/http://192.168.28.5:8081/Devops/repository/tesla-snapshot/</url>
+<url>http://192.168.28.5:8081/Devops/repository/tesla-snapshot/</url>
       </snapshotRepository>
       
   </distributionManagement>
